--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE HTML>
 <html>
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-0C1ELP6FX3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-0C1ELP6FX3');
+</script>
   </head>
   <body>
     <h1>Hello World</h1>
