--- a/Site1/Home.html
+++ b/Site1/Home.html
@@ -3,8 +3,8 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="Hor Wai​ Pin, Portfolio Preview, About Me">
-    <meta name="description" content="">
+    <meta name="keywords" content="Photography, Landscape, Photographer, Portfolio">
+    <meta name="description" content="PinPhotography">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
     <title>Pin Photography</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
