--- a/Site1/Home.html
+++ b/Site1/Home.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="Photography, Landscape, Photographer, Portfolio">
+    <meta name="keywords" content="Photography, Landscape, Photographer, Portfolio, Images, Photos">
     <meta name="description" content="PinPhotography">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
     <title>Pin Photography</title>
