--- a/Site1/Home.html
+++ b/Site1/Home.html
@@ -88,7 +88,7 @@
           <div class="u-gallery-inner u-gallery-inner-1">
             <div class="u-effect-fade u-gallery-item">
               <div class="u-back-slide" data-image-width="1280" data-image-height="853">
-                <img class="u-back-image u-expanded" src="https://pixabay.com/get/gdff4ac1c95dba805043e45e8b385db9cd88c49cfeb91fa92244405f58ecbca39ffa146bd859803388aec2da24b14c2da9c86a10b4718195514a8fe88dc6d63b8_1280.jpg">
+                <img class="u-back-image u-expanded" src="images/49750b9e3cf788f8f036cf5d8cc6a8133f3eec426643e9b2617fcc9b97977a4022e2d3108ac13a99922dd308fd6b31a3d1584b43d956e98a3f4eee_1280.jpg">
               </div>
               <div class="u-over-slide u-shading u-over-slide-1">
                 <h3 class="u-gallery-heading"></h3>
