--- a/Site1/Home.html
+++ b/Site1/Home.html
@@ -97,7 +97,7 @@
             </div>
             <div class="u-effect-fade u-gallery-item">
               <div class="u-back-slide" data-image-width="1280" data-image-height="853">
-                <img class="u-back-image u-expanded" src="https://pixabay.com/get/g127e0e9bb14a0b1bfd4aa5e12d6ce9667dad76a27404387c12ef82e11685618b341567ded4ab8c1ff68d4b6f5952fe838c73bb68c9233cb3d9236e63d6e37026_1280.jpg">
+                <img class="u-back-image u-expanded" src="images/1c837b24e30bf53eda4f6ce3224d0bf06d69a4fb88baee35dc8e72e700f0b7e1ddb5c3c5b6ceb7b74252a7f2426a4ef9299ae6f341663cf1d830c7_1280.jpg">
               </div>
               <div class="u-over-slide u-shading u-over-slide-2">
                 <h3 class="u-gallery-heading"></h3>
@@ -106,7 +106,7 @@
             </div>
             <div class="u-effect-fade u-gallery-item">
               <div class="u-back-slide" data-image-width="1280" data-image-height="853">
-                <img class="u-back-image u-expanded" src="https://pixabay.com/get/g867e76b13db890ecb1c7718358836b0bfb412559bcb60a51630a3a7cbeb457f18d2a0ee8ad6cadc73726ec1012116547f78d46b8e36b5f78e992e91233de0db1_1280.jpg">
+                <img class="u-back-image u-expanded" src="images/b890ecb1c7718358836b0bfb412559bcb60a51630a3a7cbeb457f18d2a0ee8ad6cadc73726ec1012116547f78d46b8e36b5f78e992e91233de0db1_1280.jpg">
               </div>
               <div class="u-over-slide u-shading u-over-slide-3">
                 <h3 class="u-gallery-heading"></h3>
